--- a/xllm/core/layers/npu/CMakeLists.txt
+++ b/xllm/core/layers/npu/CMakeLists.txt
@@ -13,6 +13,7 @@ cc_library(
     npu_qwen2dot5_vision_encoder_layer_impl.h
     npu_qwen3_vision_encoder_layer_impl.h
     npu_qwen3_moe_decoder_layer_impl.h
+    npu_llada_moe_decoder_layer_impl.h
     # atb_parallel_linear.h
     npu_block_copy_impl.h
     buffer/atb_buffer.h
